--- a/games/rock-paper-scissors/Cargo.toml
+++ b/games/rock-paper-scissors/Cargo.toml
@@ -1,14 +1,11 @@
 [package]
-name = "playferrous-launcher"
+name = "playferrous-rock-paper-scissors"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-async-trait = "0.1"
-thiserror = "1.0"
-anyhow = "1.0"
-ijson = "0.1.3"
+playferrous-types = { path = "../../types", features = ["process"] }
 serde = { version = "1.0", features = ["derive"] }
-playferrous-types = { path = "../types" }
+anyhow = "1.0"
