--- a/games/rock-paper-scissors/Cargo.toml
+++ b/games/rock-paper-scissors/Cargo.toml
@@ -3,6 +3,10 @@ name = "playferrous-rock-paper-scissors"
 version = "0.1.0"
 edition = "2021"
 
+[[bin]]
+name = "rock-paper-scissors"
+path = "src/main.rs"
+
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
