--- a/presentation/Cargo.toml
+++ b/presentation/Cargo.toml
@@ -12,3 +12,6 @@ thiserror = "1.0"
 anyhow = "1.0"
 tokio = { version = "1.0", features = ["sync"] }
 sqlx = "0.6"
+toml = "0.7"
+tracing = "0.1"
+chrono = "0.4"
