--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -26,8 +26,9 @@ thiserror = "1.0"
 futures = "0.3"
 serde = { version = "1.0", features = ["derive"] }
 toml = "0.7"
-aerosol = { version = "1.0.0-alpha.4", path = "../../aerosol", features = [
+aerosol = { version = "1.0.0-alpha.6", path = "../../aerosol", features = [
     "async",
 ] }
 ijson = "0.1.3"
 chrono = "0.4"
+dashmap = "5.5.0"
