--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-RUST_LOG=info,playferrous_presentation_ssh=debug
+RUST_LOG=info
 DATABASE_URL=postgres://postgres:password@127.0.0.1/playferrous
+RUST_BACKTRACE=1
