--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -11,7 +11,7 @@ playferrous-presentation = { path = "../presentation" }
 playferrous-launcher = { path = "../launcher" }
 playferrous-process-launcher = { path = "../process-launcher" }
 tokio = "1.0"
-anyhow = "1.0"
+anyhow = { version = "1.0", features = ["backtrace"] }
 async-trait = "0.1.68"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 tracing = "0.1"
@@ -32,3 +32,5 @@ aerosol = { version = "1.0.0-alpha.6", path = "../../aerosol", features = [
 ijson = "0.1.3"
 chrono = "0.4"
 dashmap = "5.5.0"
+rand = "0.8.5"
+pin-project-lite = "0.2.6"
